# ws-messaging

./: .example.env  .gitignore  .gitmodules  package-lock.json  package.json  pyproject.toml  webpack.config.js
backend/: global_vars.py  main.py  ws.py
backend/jobs/: __init__.py  test.py  test2.py
frontend/: index.html  index.js
frontend/pages/: Home.jsx
