[tool.poetry]
name = "ws-messaging"
version = "0.1.0"
description = "websocket messaging app."
authors = ["torrin1 <torrin@worx4you.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
